--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <div id="main_title">
+        <div>
             <h1>WiroWik Portfolio</h1>
-        </div>
+            <h2>Work in progress</h2>
+        <div>
     </body>
     <link rel="stylesheet" href="style.css">
 </html>
