--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <div>
-            <h1>WiroWik Portfolio</h1>
-            <h2>Work in progress</h2>
-        <div>
+        <div id="wrapper">
+            <div class="glass" id="title-wrap">
+                <h1>WiroWik Portfolio</h1>
+                <h2>Work in progress</h2>
+            </div>
+        </div>
     </body>
     <link rel="stylesheet" href="style.css">
 </html>
